syntax = "proto3";

option go_package = "github.com/sir-shalahuddin/grpc-learn/bookservice/proto";

service BookService {
    rpc GetBooks (GetBooksRequest) returns (BookListResponse);
    rpc BorrowBook (BorrowBookRequest) returns (BorrowBookResponse);
}

message GetBooksRequest {
    int32 page_number = 1;
    int32 page_size = 2;
}

message BorrowBookRequest {
    string book_id = 1;  
    string user_id = 2;   
}

message BookResponse {
    string id = 1;        
    string title = 2;
    string author = 3;
    string category_name = 4;
    int32 available_copies = 5;
    int32 total_copies = 6;
}

message BookListResponse {
    repeated BookResponse books = 1;
}

message BorrowBookResponse {
    bool success = 1;
    string message = 2;
}
